# gis-application

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
infrastructure/: models.py  serializers.py  viewsets.py
tools/: models.py  serializers.py  viewsets.py
tools/migrations/: 0001_initial.py  0002_auto_20210423_1740.py
