[tool.poetry]
name = "django-mongo"
version = "0.1.0"
description = ""
authors = ["santanarscs <raphaelstn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
djangorestframework = "^3.12.4"
mongoengine = "^0.23.0"
django-rest-framework-mongoengine = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
